No.7 - 使用 animate.css 实现一个优雅的登录框

--- a/No.7 - 使用 animate.css 实现一个优雅的登录框/main.css
+++ b/No.7 - 使用 animate.css 实现一个优雅的登录框/main.css
@@ -60,7 +60,7 @@ p {
     font-size: 1.6rem;
     outline: 0;
     border: none;
-    border-bottom: solid 1px #ddd;
+    /* border-bottom: solid 1px #ddd; */
 }
 .form__input:focus {
     background-position: 0 0;
